@@ -87,9 +87,9 @@ public class AngleEditorRads extends AbstractPropertyEditor {
 	
 	public Object getValue() {
 		if (valueClass == Float.class)
-			return new Float(angleRads);
+			return Float.valueOf(Double.valueOf(angleRads).floatValue());
 		else
-			return new Double(angleRads);
+			return Double.valueOf(angleRads);
 	}
 	
 	public void setValue(Object arg0) {
