@@ -107,15 +107,15 @@ public class Enumerated extends Number implements Comparable<Enumerated> {
                 || slzType.equals("int8_t")
                 || slzType.equals("int16_t"))
         {
-            slzNumber = new Short((short) currentValue);
+            slzNumber = Short.valueOf((short) currentValue);
         }
         else
         if(slzType.equals("int32_t")
         || slzType.equals("uint16_t")) {
-           slzNumber = new Integer((int) currentValue);
+           slzNumber = Integer.valueOf((int) currentValue);
         }
         else{
-           slzNumber = new Long(currentValue);
+           slzNumber = Long.valueOf(currentValue);
         }
         return slzNumber;
     }
